# docs/swagger.json
@@ -3,14 +3,6 @@
   "paths": {
     "/rest/v1/beans": {
       "get": {
-        "security": [
-          {
-            "api_key": []
-          },
-          {
-            "oauth": []
-          }
-        ],
         "description": "This will show all beans by default.",
         "consumes": [
           "application/json"
@@ -37,9 +29,7 @@
           "404": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      },
-      "post": {
+        },
         "security": [
           {
             "api_key": []
@@ -47,7 +37,9 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      },
+      "post": {
         "description": "This will create new beans.",
         "consumes": [
           "application/json"
@@ -88,11 +80,7 @@
           "413": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      }
-    },
-    "/rest/v1/beans/{id}": {
-      "get": {
+        },
         "security": [
           {
             "api_key": []
@@ -100,7 +88,11 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      }
+    },
+    "/rest/v1/beans/{id}": {
+      "get": {
         "description": "This will get the beans with the given id.",
         "consumes": [
           "application/json"
@@ -137,9 +129,7 @@
           "404": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      },
-      "put": {
+        },
         "security": [
           {
             "api_key": []
@@ -147,7 +137,9 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      },
+      "put": {
         "description": "This will update beans by its given id.",
         "consumes": [
           "application/json"
@@ -196,9 +188,7 @@
           "413": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      },
-      "delete": {
+        },
         "security": [
           {
             "api_key": []
@@ -206,7 +196,9 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      },
+      "delete": {
         "description": "This will delete beans by its given id.",
         "consumes": [
           "application/json"
@@ -235,7 +227,7 @@
         ],
         "responses": {
           "200": {
-            "description": "ItemDeletedResponse",
+            "description": "ItemDeletedResponse represents the response when an item is deleted",
             "schema": {
               "$ref": "#/definitions/ItemDeletedResponse"
             }
@@ -246,11 +238,7 @@
           "404": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      }
-    },
-    "/rest/v1/roasters": {
-      "get": {
+        },
         "security": [
           {
             "api_key": []
@@ -258,7 +246,11 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      }
+    },
+    "/rest/v1/roasters": {
+      "get": {
         "description": "This will show all roasters by default.",
         "consumes": [
           "application/json"
@@ -285,9 +277,7 @@
           "404": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      },
-      "post": {
+        },
         "security": [
           {
             "api_key": []
@@ -295,7 +285,9 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      },
+      "post": {
         "description": "This will create a new roaster.",
         "consumes": [
           "application/json"
@@ -336,11 +328,7 @@
           "413": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      }
-    },
-    "/rest/v1/roasters/{id}": {
-      "get": {
+        },
         "security": [
           {
             "api_key": []
@@ -348,7 +336,11 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      }
+    },
+    "/rest/v1/roasters/{id}": {
+      "get": {
         "description": "This will get the roaster with the given id.",
         "consumes": [
           "application/json"
@@ -385,9 +377,7 @@
           "404": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      },
-      "put": {
+        },
         "security": [
           {
             "api_key": []
@@ -395,7 +385,9 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      },
+      "put": {
         "description": "This will update a roaster by its given id.",
         "consumes": [
           "application/json"
@@ -441,12 +433,13 @@
           "404": {
             "$ref": "#/responses/ErrorResponse"
           },
+          "409": {
+            "$ref": "#/responses/ErrorResponse"
+          },
           "413": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      },
-      "delete": {
+        },
         "security": [
           {
             "api_key": []
@@ -454,7 +447,9 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      },
+      "delete": {
         "description": "This will delete a roaster by its given id.",
         "consumes": [
           "application/json"
@@ -483,7 +478,7 @@
         ],
         "responses": {
           "200": {
-            "description": "ItemDeletedResponse",
+            "description": "ItemDeletedResponse represents the response when an item is deleted",
             "schema": {
               "$ref": "#/definitions/ItemDeletedResponse"
             }
@@ -494,11 +489,7 @@
           "404": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      }
-    },
-    "/rest/v1/sheets": {
-      "get": {
+        },
         "security": [
           {
             "api_key": []
@@ -506,7 +497,11 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      }
+    },
+    "/rest/v1/sheets": {
+      "get": {
         "description": "This will show all sheets by default.",
         "consumes": [
           "application/json"
@@ -533,9 +528,7 @@
           "404": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      },
-      "post": {
+        },
         "security": [
           {
             "api_key": []
@@ -543,7 +536,9 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      },
+      "post": {
         "description": "This will create a new sheet.",
         "consumes": [
           "application/json"
@@ -584,11 +579,7 @@
           "413": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      }
-    },
-    "/rest/v1/sheets/{id}": {
-      "get": {
+        },
         "security": [
           {
             "api_key": []
@@ -596,7 +587,11 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      }
+    },
+    "/rest/v1/sheets/{id}": {
+      "get": {
         "description": "This will get the sheet with the given id.",
         "consumes": [
           "application/json"
@@ -633,9 +628,7 @@
           "404": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      },
-      "put": {
+        },
         "security": [
           {
             "api_key": []
@@ -643,7 +636,9 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      },
+      "put": {
         "description": "This will update a sheet by its given id.",
         "consumes": [
           "application/json"
@@ -689,12 +684,13 @@
           "404": {
             "$ref": "#/responses/ErrorResponse"
           },
+          "409": {
+            "$ref": "#/responses/ErrorResponse"
+          },
           "413": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      },
-      "delete": {
+        },
         "security": [
           {
             "api_key": []
@@ -702,7 +698,9 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      },
+      "delete": {
         "description": "This will delete a sheet by its given id.",
         "consumes": [
           "application/json"
@@ -731,7 +729,7 @@
         ],
         "responses": {
           "200": {
-            "description": "ItemDeletedResponse",
+            "description": "ItemDeletedResponse represents the response when an item is deleted",
             "schema": {
               "$ref": "#/definitions/ItemDeletedResponse"
             }
@@ -742,11 +740,7 @@
           "404": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      }
-    },
-    "/rest/v1/shots": {
-      "get": {
+        },
         "security": [
           {
             "api_key": []
@@ -754,7 +748,11 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      }
+    },
+    "/rest/v1/shots": {
+      "get": {
         "description": "This will show all shots by default.",
         "consumes": [
           "application/json"
@@ -781,9 +779,7 @@
           "404": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      },
-      "post": {
+        },
         "security": [
           {
             "api_key": []
@@ -791,7 +787,9 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      },
+      "post": {
         "description": "This will create a new shot.",
         "consumes": [
           "application/json"
@@ -832,11 +830,7 @@
           "413": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      }
-    },
-    "/rest/v1/shots/{id}": {
-      "get": {
+        },
         "security": [
           {
             "api_key": []
@@ -844,7 +838,11 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      }
+    },
+    "/rest/v1/shots/{id}": {
+      "get": {
         "description": "This will get the shot with the given id.",
         "consumes": [
           "application/json"
@@ -881,9 +879,7 @@
           "404": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      },
-      "put": {
+        },
         "security": [
           {
             "api_key": []
@@ -891,7 +887,9 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      },
+      "put": {
         "description": "This will update a shot by its given id.",
         "consumes": [
           "application/json"
@@ -940,9 +938,7 @@
           "413": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
-      },
-      "delete": {
+        },
         "security": [
           {
             "api_key": []
@@ -950,7 +946,9 @@
           {
             "oauth": []
           }
-        ],
+        ]
+      },
+      "delete": {
         "description": "This will delete a shot by its given id.",
         "consumes": [
           "application/json"
@@ -979,7 +977,7 @@
         ],
         "responses": {
           "200": {
-            "description": "ItemDeletedResponse",
+            "description": "ItemDeletedResponse represents the response when an item is deleted",
             "schema": {
               "$ref": "#/definitions/ItemDeletedResponse"
             }
@@ -990,7 +988,15 @@
           "404": {
             "$ref": "#/responses/ErrorResponse"
           }
-        }
+        },
+        "security": [
+          {
+            "api_key": []
+          },
+          {
+            "oauth": []
+          }
+        ]
       }
     }
   },
@@ -1416,9 +1422,6 @@
   "responses": {
     "BeansResponse": {
       "description": "BeansResponse represents coffee beans for this application\n\nBeans have a name, a roaster, a roast date and a roast level.",
-      "schema": {
-        "$ref": "#/definitions/RoastLevel"
-      },
       "headers": {
         "created_at": {
           "type": "string",
@@ -1435,7 +1438,10 @@
           "type": "string",
           "format": "date-time"
         },
-        "roast_level": {},
+        "roast_level": {
+          "type": "integer",
+          "format": "uint8"
+        },
         "roaster": {},
         "updated_at": {
           "type": "string",
@@ -1448,10 +1454,6 @@
       "headers": {
         "msg": {
           "type": "string"
-        },
-        "status": {
-          "type": "integer",
-          "format": "int64"
         }
       }
     },
@@ -1505,15 +1507,15 @@
     },
     "ShotResponse": {
       "description": "ShotResponse represents an espresso shot for this application\n\nAn espresso shot is made from coffee beans, ground at a specific setting,\nwith a specific quantity of coffee in and out.\nIt also has a specific shot time and water temperature.\n\nThe result of a shot can be rated and compared to the previous shot.\nIt can also be too bitter or too sour.",
-      "schema": {
-        "$ref": "#/definitions/ComparaisonWithPreviousResult"
-      },
       "headers": {
         "additional_notes": {
           "type": "string"
         },
         "beans": {},
-        "comparaison_with_previous_result": {},
+        "comparaison_with_previous_result": {
+          "type": "integer",
+          "format": "uint8"
+        },
         "created_at": {
           "type": "string",
           "format": "date-time"
@@ -1545,7 +1547,10 @@
           "format": "double"
         },
         "sheet": {},
-        "shot_time": {},
+        "shot_time": {
+          "type": "integer",
+          "format": "int64"
+        },
         "updated_at": {
           "type": "string",
           "format": "date-time"
